--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginBottom="24dp"
+        android:autofillHints=""
         android:background="@drawable/edit_text_border"
         android:ems="10"
         android:hint="   Enter password"
@@ -88,10 +89,11 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
+        android:autofillHints=""
         android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:hint="   Email"
-        android:inputType="textPersonName"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
         android:textColor="@android:color/darker_gray"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/password"
@@ -143,6 +145,7 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/shapes1" />
@@ -167,6 +170,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:contentDescription="TODO"
                 app:layout_constraintBottom_toTopOf="@+id/textView2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
