--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="51dp"
         android:layout_marginTop="65dp"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
@@ -28,6 +29,7 @@
         android:layout_height="51dp"
         android:layout_marginStart="94dp"
         android:layout_marginTop="56dp"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toEndOf="@+id/patient_list_company_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile_icon_small" />
@@ -38,6 +40,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="172dp"
         android:layout_marginTop="44dp"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gopher_logo" />
@@ -51,7 +54,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Patient List"
         android:textColor="@android:color/white"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:translationZ="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/patient_list_company_icon" />
@@ -90,6 +93,7 @@
                 android:id="@+id/imageView55"
                 android:layout_width="35dp"
                 android:layout_height="33dp"
+                android:contentDescription="TODO"
                 app:srcCompat="@drawable/red_circle"
                 tools:layout_editor_absoluteX="41dp"
                 tools:layout_editor_absoluteY="232dp" />
@@ -102,7 +106,7 @@
                 android:fontFamily="sans-serif-black"
                 android:text="Patients Overview"
                 android:textColor="@color/black"
-                android:textSize="15dp" />
+                android:textSize="15sp" />
 
             <ImageView
                 android:id="@+id/imageView64"
@@ -110,6 +114,7 @@
                 android:layout_height="31dp"
                 android:layout_marginLeft="140dp"
                 android:layout_marginTop="5dp"
+                android:contentDescription="TODO"
                 app:srcCompat="@drawable/right_vector"
                 tools:layout_editor_absoluteX="337dp"
                 tools:layout_editor_absoluteY="234dp" />
@@ -129,7 +134,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/patient_list_recycleView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <ImageView
@@ -137,6 +142,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginStart="188dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toTopOf="@+id/imageView62"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/three_point" />
@@ -147,6 +153,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="188dp"
         android:layout_marginBottom="13dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/edit_button_plus" />
