--- a/app/src/main/res/layout/activity_upload_photo.xml
+++ b/app/src/main/res/layout/activity_upload_photo.xml
@@ -84,6 +84,7 @@
             android:layout_height="25dp"
             android:layout_marginLeft="165dp"
             android:layout_marginTop="72dp"
+            android:contentDescription="TODO"
             android:elevation="20dp"
             android:src="@drawable/crop" />
 
@@ -101,6 +102,7 @@
             android:layout_height="25dp"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="155dp"
+            android:contentDescription="TODO"
             android:elevation="20dp"
             android:src="@drawable/camera" />
 
@@ -118,6 +120,7 @@
             android:layout_height="25dp"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="201dp"
+            android:contentDescription="TODO"
             android:elevation="20dp"
             android:src="@drawable/gallery" />
 
@@ -128,6 +131,7 @@
             android:layout_height="23dp"
             android:layout_marginLeft="345dp"
             android:layout_marginTop="3dp"
+            android:contentDescription="TODO"
             android:elevation="20dp"
             android:src="@drawable/close" />
 
