--- a/app/src/main/res/layout/fragment_current_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_current_medical_diagnostics.xml
@@ -36,7 +36,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="Marilyn Bvaton"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +89,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="Normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +141,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="Normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -188,7 +194,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -240,7 +248,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="Normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -292,7 +302,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -344,7 +356,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -396,7 +410,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
+                android:inputType="TODO"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
