--- a/app/src/main/res/layout/fragment_health_data_for_view1.xml
+++ b/app/src/main/res/layout/fragment_health_data_for_view1.xml
@@ -45,6 +45,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -68,6 +69,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow_gray"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -91,6 +93,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -114,6 +117,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -137,6 +141,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -160,6 +165,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -183,6 +189,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -206,6 +213,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -229,6 +237,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -252,6 +261,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -275,6 +285,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -298,6 +309,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -321,6 +333,7 @@
                     android:layout_width="375dp"
                     android:layout_height="39dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
