--- a/app/src/main/res/layout/fragment_health_data_for_view2.xml
+++ b/app/src/main/res/layout/fragment_health_data_for_view2.xml
@@ -42,6 +42,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -72,6 +73,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -103,6 +105,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -134,6 +137,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -165,6 +169,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -196,6 +201,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -227,6 +233,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -258,6 +265,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -289,6 +297,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -320,6 +329,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -351,6 +361,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -382,6 +393,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -413,6 +425,7 @@
                     android:layout_height="39dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="5dp"
+                    android:autofillHints=""
                     android:background="@drawable/rectangle_drop_shadow"
                     android:ems="10"
                     android:inputType="textPersonName"
