--- a/app/src/main/res/layout/activity_care_plan.xml
+++ b/app/src/main/res/layout/activity_care_plan.xml
@@ -27,6 +27,7 @@
                 android:layout_width="750dp"
                 android:layout_height="61dp"
                 android:layout_marginTop="45dp"
+                android:contentDescription="TODO"
                 app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -40,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
+                android:contentDescription="TODO"
                 app:srcCompat="@drawable/menu_button" />
         </androidx.cardview.widget.CardView>
 
@@ -64,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="180dp"
             android:layout_marginTop="35dp"
+            android:contentDescription="TODO"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gopher_logo" />
@@ -88,7 +91,7 @@
             android:layout_marginTop="16dp"
             android:text="Care Plan"
             android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
