--- a/app/src/main/res/layout/activity_confirm_incident.xml
+++ b/app/src/main/res/layout/activity_confirm_incident.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="190dp"
             android:layout_marginTop="65dp"
+            android:contentDescription="TODO"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gopher_logo" />
 
@@ -46,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="70dp"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/menu_button" />
 
         <ImageView
@@ -54,6 +56,7 @@
             android:layout_height="51dp"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="65dp"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
@@ -83,7 +86,7 @@
             android:fontFamily="sans-serif"
             android:text="Confirm Incident"
             android:textColor="@android:color/white"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
     </androidx.cardview.widget.CardView>
 
@@ -92,6 +95,7 @@
         android:layout_width="424dp"
         android:layout_height="82dp"
         android:layout_marginTop="-25dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +110,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="!  Alert"
         android:textColor="@android:color/holo_red_light"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView9"
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
@@ -118,7 +122,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="36dp"
         android:text="Detected : 09:49 AM"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/textView30"
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
@@ -128,6 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="93dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button8"
         app:srcCompat="@drawable/rectangle3" />
@@ -136,6 +141,7 @@
         android:id="@+id/imageView12"
         android:layout_width="316dp"
         android:layout_height="356dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9"
@@ -148,7 +154,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
         android:text="@string/confirm_incident_text"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/name3" />
 
@@ -181,7 +187,7 @@
         android:layout_marginStart="88dp"
         android:layout_marginTop="16dp"
         android:text="Vertification time: 12:39 pm"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/name4" />
 
@@ -206,6 +212,7 @@
         android:layout_width="351dp"
         android:layout_height="130dp"
         android:layout_marginTop="10dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView12"
@@ -218,7 +225,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
         android:text="Estimated time : 30 minutes"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
@@ -227,6 +234,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView12"
@@ -239,6 +247,7 @@
         android:layout_height="28dp"
         android:layout_marginStart="12dp"
         android:background="#E7EAEB"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="@+id/imageView26"
         app:layout_constraintTop_toTopOf="@+id/imageView24"
         app:srcCompat="@drawable/checkedcheckbox" />
@@ -294,6 +303,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
+            android:contentDescription="TODO"
             android:src="@drawable/spinner_drop" />
 
     </RelativeLayout>
