--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -27,6 +27,7 @@
             android:layout_height="120dp"
             android:layout_marginLeft="140dp"
             android:layout_marginTop="135dp"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
@@ -60,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="25dp"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
@@ -70,6 +72,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="35dp"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gopher_logo" />
@@ -108,6 +111,7 @@
                 android:background="@drawable/careplan_button"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/white"
+                android:textIsSelectable="true"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView1" />
@@ -200,8 +204,10 @@
                 android:layout_width="330dp"
                 android:layout_height="94dp"
                 android:layout_marginTop="4dp"
+                android:autofillHints=""
                 android:background="@drawable/rectangle"
                 android:gravity="left"
+                android:inputType="TODO"
                 android:text="Patient normal, daily visit..."
                 android:textColor="@color/black_overlay"
                 android:textSize="12sp"
@@ -247,6 +253,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:contentDescription="TODO"
                 android:src="@drawable/urgent_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/urgentMedicalAttentionTextView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -277,6 +284,7 @@
                 android:layout_height="50dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:contentDescription="TODO"
                 android:src="@drawable/hospital_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/requiresHospitalisationTextView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
@@ -307,6 +315,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:contentDescription="TODO"
                 android:src="@drawable/forbidden_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/notApplicableTextView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView4"
@@ -342,6 +351,7 @@
                 android:layout_marginEnd="14dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:contentDescription="TODO"
                 android:src="@drawable/time_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/requiresHourlyAttentionTextView"
                 app:layout_constraintEnd_toStartOf="@+id/loginBtn"
