--- a/app/src/main/res/layout/activity_fall_alert.xml
+++ b/app/src/main/res/layout/activity_fall_alert.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="190dp"
             android:layout_marginTop="65dp"
+            android:contentDescription="TODO"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gopher_logo" />
 
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="70dp"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/menu_button" />
 
         <ImageView
@@ -42,6 +44,7 @@
             android:layout_height="51dp"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="65dp"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
@@ -71,7 +74,7 @@
             android:fontFamily="@font/poppins_bold"
             android:text="Alert"
             android:textColor="@android:color/white"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView21"
@@ -81,7 +84,7 @@
             android:layout_marginTop="120dp"
             android:text="!"
             android:textColor="@android:color/holo_red_light"
-            android:textSize="23dp" />
+            android:textSize="23sp" />
     </androidx.cardview.widget.CardView>
 
     <ImageView
@@ -89,6 +92,7 @@
         android:layout_width="424dp"
         android:layout_height="82dp"
         android:layout_marginTop="2dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="52dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/chevrondown" />
@@ -122,6 +127,7 @@
         android:layout_width="402dp"
         android:layout_height="223dp"
         android:layout_marginStart="8dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,6 +138,7 @@
         android:id="@+id/imageView14"
         android:layout_width="416dp"
         android:layout_height="69dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +151,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
         android:text="Detected : 09:49 AM"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -166,6 +173,7 @@
         android:layout_height="167dp"
         android:layout_marginStart="53dp"
         android:layout_marginEnd="40dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +187,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="4dp"
         android:text="·   No movement detected over 15 minutes"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView16"
         app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
@@ -189,7 +197,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:text="·   Usual naptime: 1:30pm - 2:20pm"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView16"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
@@ -197,6 +205,7 @@
         android:id="@+id/imageView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         app:srcCompat="@drawable/rectangle3"
         tools:layout_editor_absoluteX="113dp"
         tools:layout_editor_absoluteY="725dp" />
@@ -205,6 +214,7 @@
         android:id="@+id/imageView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         app:srcCompat="@drawable/rectangle1646"
         tools:layout_editor_absoluteX="338dp"
         tools:layout_editor_absoluteY="552dp" />
@@ -227,7 +237,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="9dp"
         android:text="·   Lying in an unsual place."
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView16"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -239,7 +249,7 @@
         android:layout_marginTop="7dp"
         android:maxWidth="240dp"
         android:text="·   Resembling sleeping behaviour in an unusual time"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView16"
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
@@ -250,7 +260,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="3dp"
         android:text="·   Usual bedtime: 10:30pm - 6:30am"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView16"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
@@ -259,6 +269,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/imageView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.632"
@@ -280,6 +291,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/false_alarm" />
 
         <ImageButton
@@ -288,6 +300,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
             android:background="#FFFFFF"
+            android:contentDescription="TODO"
             android:translationZ="100dp"
             app:srcCompat="@drawable/call" />
 
@@ -296,6 +309,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/confirm_incident" />
     </LinearLayout>
 
