--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -20,8 +20,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:autofillHints=""
         android:gravity="top"
         android:hint="Enter your feedback..."
+        android:inputType="TODO"
         android:minLines="4" />
 
     <Button
