--- a/app/src/main/res/layout/activity_homepage4admin.xml
+++ b/app/src/main/res/layout/activity_homepage4admin.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="New Patient"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -30,7 +30,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Sign Out"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -44,7 +44,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Daily Report"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -79,7 +79,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Patient List"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -104,7 +104,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Settings"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -217,6 +217,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="54dp"
+                android:contentDescription="TODO"
                 app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
