--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -39,7 +39,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Settings"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -63,7 +63,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Patient List"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -99,7 +99,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Sign Out"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
@@ -149,6 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="54dp"
+                android:contentDescription="TODO"
                 app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
