--- a/app/src/main/res/layout/activity_main_page_with_menu.xml
+++ b/app/src/main/res/layout/activity_main_page_with_menu.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="60dp"
         android:background="@drawable/menu_button"
         android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="72dp"
                     android:layout_marginTop="41dp"
+                    android:contentDescription="TODO"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/gopher_logo" />
@@ -53,6 +55,7 @@
                     android:layout_marginStart="27dp"
                     android:layout_marginTop="32dp"
                     android:clickable="true"
+                    android:focusable="true"
                     android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/company_logo">
@@ -61,6 +64,7 @@
                         android:id="@+id/menu_home_icon"
                         android:layout_width="22.5dp"
                         android:layout_height="20dp"
+                        android:contentDescription="TODO"
                         android:src="@drawable/menu_home" />
 
                     <TextView
@@ -82,6 +86,7 @@
                     android:layout_marginStart="27dp"
                     android:layout_marginTop="63dp"
                     android:clickable="true"
+                    android:focusable="true"
                     android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/menu_home_linearLayout">
@@ -90,6 +95,7 @@
                         android:id="@+id/menu_admin_icon"
                         android:layout_width="22.5dp"
                         android:layout_height="20dp"
+                        android:contentDescription="TODO"
                         android:src="@drawable/menu_pen_edit" />
 
                     <TextView
@@ -111,6 +117,7 @@
                     android:layout_marginStart="27dp"
                     android:layout_marginTop="63dp"
                     android:clickable="true"
+                    android:focusable="true"
                     android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/menu_admin_linearLayout">
@@ -119,6 +126,7 @@
                         android:id="@+id/menu_settings_icon"
                         android:layout_width="22.5dp"
                         android:layout_height="20dp"
+                        android:contentDescription="TODO"
                         android:src="@drawable/menu_settings" />
 
                     <TextView
@@ -140,6 +148,7 @@
                     android:layout_marginStart="27dp"
                     android:layout_marginTop="63dp"
                     android:clickable="true"
+                    android:focusable="true"
                     android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/menu_settings_linearLayout">
@@ -148,6 +157,7 @@
                         android:id="@+id/menu_sigh_out_icon"
                         android:layout_width="22.5dp"
                         android:layout_height="20dp"
+                        android:contentDescription="TODO"
                         android:src="@drawable/menu_signout" />
 
                     <TextView
