--- a/app/src/main/res/layout/activity_patient_dashboard.xml
+++ b/app/src/main/res/layout/activity_patient_dashboard.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
         android:background="@color/white"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/patientDataButton"
         app:srcCompat="@drawable/daily_report" />
@@ -25,6 +26,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
         android:background="@color/white"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView"
         app:srcCompat="@drawable/patient_data" />
@@ -36,6 +38,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
         android:background="@color/white"
+        android:contentDescription="TODO"
         android:onClick="onCarePlanClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView"
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:background="@color/white"
+        android:contentDescription="TODO"
         android:onClick="onHealthDataClick"
         app:layout_constraintEnd_toStartOf="@+id/carePlanButton"
         app:layout_constraintStart_toEndOf="@+id/patientDataButton"
@@ -59,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:background="@color/white"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toStartOf="@+id/associateRadarButton"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toEndOf="@+id/dailyReportButton"
@@ -72,6 +77,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
         android:background="@color/white"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/carePlanButton"
         app:srcCompat="@drawable/associate_radar" />
@@ -110,6 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_marginTop="54dp"
+                android:contentDescription="TODO"
                 app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
