--- a/app/src/main/res/layout/activity_status_layout.xml
+++ b/app/src/main/res/layout/activity_status_layout.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:contentDescription="TODO"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/standing_man" />
@@ -62,6 +63,7 @@
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="18dp"
+                android:contentDescription="TODO"
                 android:translationZ="500dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
