--- a/app/src/main/res/layout/fragment_patient_add.xml
+++ b/app/src/main/res/layout/fragment_patient_add.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <!-- Background ImageView -->
         <ImageView
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:contentDescription="TODO"
             android:src="@drawable/background_logo" />
 
         <LinearLayout
@@ -60,7 +61,7 @@
                                 android:fontFamily="sans-serif-black"
                                 android:gravity="center"
                                 android:text="1"
-                                android:textSize="10dp" />
+                                android:textSize="10sp" />
 
                             <View
                                 android:layout_width="20dp"
@@ -82,7 +83,7 @@
                             android:text="New patient details"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="8dp"
+                            android:textSize="8sp"
                             app:layout_constraintTop_toBottomOf="@id/step1" />
 
                     </LinearLayout>
@@ -108,7 +109,7 @@
                                 android:fontFamily="sans-serif-black"
                                 android:gravity="center"
                                 android:text="2"
-                                android:textSize="10dp" />
+                                android:textSize="10sp" />
 
                             <View
                                 android:layout_width="15dp"
@@ -130,7 +131,7 @@
                             android:text="Next to Kin"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="8dp"
+                            android:textSize="8sp"
                             app:layout_constraintTop_toBottomOf="@id/step1" />
 
 
@@ -157,7 +158,7 @@
                                 android:fontFamily="sans-serif-black"
                                 android:gravity="center"
                                 android:text="3"
-                                android:textSize="10dp" />
+                                android:textSize="10sp" />
 
                             <View
                                 android:layout_width="15dp"
@@ -179,7 +180,7 @@
                             android:text="Next to Kin+"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="8dp"
+                            android:textSize="8sp"
                             app:layout_constraintTop_toBottomOf="@id/step1" />
 
 
@@ -206,7 +207,7 @@
                                 android:fontFamily="sans-serif-black"
                                 android:gravity="center"
                                 android:text="4"
-                                android:textSize="10dp" />
+                                android:textSize="10sp" />
 
                             <View
                                 android:layout_width="15dp"
@@ -228,7 +229,7 @@
                             android:text="Gp"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="8dp"
+                            android:textSize="8sp"
                             app:layout_constraintTop_toBottomOf="@id/step1" />
 
 
@@ -255,7 +256,7 @@
                                 android:fontFamily="sans-serif-black"
                                 android:gravity="center"
                                 android:text="5"
-                                android:textSize="10dp" />
+                                android:textSize="10sp" />
 
 
                         </LinearLayout>
@@ -271,7 +272,7 @@
                             android:text="Gp+"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="8dp"
+                            android:textSize="8sp"
                             app:layout_constraintTop_toBottomOf="@id/step1" />
 
 
@@ -331,6 +332,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
                 android:hint="Enter a first name"
                 android:textSize="14sp"
@@ -363,6 +365,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
                 android:hint="Enter a middle name"
                 android:textSize="14sp"
@@ -396,6 +399,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
                 android:hint="Enter a last name"
                 android:inputType="textMultiLine"
@@ -426,6 +430,7 @@
                 android:layout_width="365dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:autofillHints=""
                 android:background="@null"
                 android:hint="DD/MM/YYYY"
                 android:textSize="14sp"
@@ -456,6 +461,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="1dp"
+                android:autofillHints=""
                 android:background="@null"
                 android:hint="Eg. 1234 56789 0"
                 android:inputType="textMultiLine"
@@ -486,6 +492,7 @@
                 android:layout_width="365dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:autofillHints=""
                 android:background="@null"
                 android:backgroundTint="#ECECEC"
                 android:hint="Eg. L123456789012"
