--- a/app/src/main/res/layout/update_popup.xml
+++ b/app/src/main/res/layout/update_popup.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:text="Update"
         android:textColor="#FFF"
-        android:textSize="25dp" />
+        android:textSize="25sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -28,8 +28,10 @@
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:autofillHints=""
         android:background="@drawable/rounded"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="TODO" />
 
     <TextView
         android:layout_width="match_parent"
@@ -46,8 +48,10 @@
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:autofillHints=""
         android:background="@drawable/rounded"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="TODO" />
 
     <TextView
         android:layout_width="match_parent"
@@ -64,8 +68,10 @@
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:autofillHints=""
         android:background="@drawable/rounded"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="TODO" />
 
     <TextView
         android:layout_width="299dp"
@@ -82,8 +88,10 @@
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:autofillHints=""
         android:background="@drawable/rounded"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="TODO" />
 
     <TextView
         android:layout_width="match_parent"
@@ -100,8 +108,10 @@
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:autofillHints=""
         android:background="@drawable/rounded"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="TODO" />
 
     <TextView
         android:layout_width="match_parent"
@@ -118,8 +128,10 @@
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:autofillHints=""
         android:background="@drawable/rounded"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="TODO" />
 
     <Button
         android:id="@+id/btnUpdate"
